# goobar

./: .gitignore  Makefile.am  README.md  configure.ac  goobar.scm  guix.scm  pre-inst-env.in  status.scm
.github/workflows/: test.yml
build-aux/: test-env.in
goobar/: annotation.scm  colors.scm  configuration.scm  external.scm.in  options.scm  output.scm  processes.scm
goobar/output/: element.scm
scripts/: goobar.in
status/: http-client.scm  network.scm  nl80211.scm
status/collector/: backlight.scm  battery.scm  cpu-temperature.scm  cpu-usage.scm  disk.scm  disk.scm.in  ethernet.scm  ipv6.scm  load.scm  memory.scm  network-rate.scm  pulseaudio.scm  pulseaudio.scm.in  time.scm  weather.scm  wifi.scm
tests/: helper.scm  http.scm
tests/goobar/: annotation.scm  colors.scm  processes.scm  test-config.sh  test-output.sh
tests/status/: battery.scm  http-client.scm  network-rate.scm  weather.scm  wifi.scm
